@@ -5,7 +5,7 @@ import in.bushansirgur.billingsoftware.service.impl.AppUserDetailsService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod; // <--- IMPORTANT: Import HttpMethod
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -23,6 +23,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.List;
+import java.util.Arrays; // Import Arrays
 
 @Configuration
 @EnableWebSecurity
@@ -35,17 +36,21 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(Customizer.withDefaults()) // ✅ Enable CORS support in Spring Security
-                .csrf(AbstractHttpConfigurer::disable)
+                .csrf(AbstractHttpConfigurer::disable) // Disable CSRF for stateless APIs
+                .cors(Customizer.withDefaults()) // Apply CORS configuration from the bean
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // --- THIS IS THE CRUCIAL LINE FOR OPTIONS PREFLIGHT ---
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Allow OPTIONS requests for all paths
-                        // -----------------------------------------------------
+                        // CRITICAL: Permit OPTIONS requests for all paths *first*
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // Permit specific public endpoints
                         .requestMatchers("/login", "/encode", "/uploads/**").permitAll()
+                        // Require roles for other specific endpoints
                         .requestMatchers("/categories", "/items", "/orders", "/payments", "/dashboard").hasAnyRole("USER", "ADMIN")
                         .requestMatchers("/admin/**").hasRole("ADMIN")
-                        .anyRequest().authenticated())
+                        // All other requests require authentication
+                        .anyRequest().authenticated()
+                )
+                // Add JWT filter before UsernamePasswordAuthenticationFilter
                 .addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -58,17 +63,28 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        // It's safer and clearer to list specific origins.
-        // If you need more dynamic origins, keep setAllowedOriginPatterns, but ensure it's configured correctly.
-        config.setAllowedOrigins(List.of("https://medibill-frontend.vercel.app", "http://localhost:5173")); // Added localhost for dev
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*")); // Or specify required headers like "Authorization", "Content-Type"
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L); // Cache preflight response for 1 hour
+        CorsConfiguration configuration = new CorsConfiguration();
+        // Be very explicit with origins. Add both local and deployed.
+        configuration.setAllowedOrigins(Arrays.asList("https://medibill-frontend.vercel.app", "http://localhost:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")); // Include PATCH as well, common in REST
+        // IMPORTANT: Be explicit with allowed headers. "*" can sometimes be tricky or less secure.
+        // These are common headers your frontend might send.
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type")); // If your backend sends custom headers
+        configuration.setAllowCredentials(true); // Allow cookies/auth headers
+        configuration.setMaxAge(3600L); // Cache preflight response for 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // Apply CORS config to all paths
+        // Apply this CORS config to all paths
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
